# exchange-simulator-assignment

./: .clang-format  .gitignore  CMakeLists.txt  Readme.md
.github/workflows/: c-cpp.yml
include/exchange/: exchange.h  matcher.h  order.h  product.h  report.h  typing.h
scripts/: build.sh  clang-format-check.sh  clang-format.sh  cpplint-check.sh
src/: exchange.cc  main.cc  matcher.cc  product.cc
